Unable to open N panel for the first time with click drag #113726

Closed
opened 2023-10-14 18:41:16 +02:00 by ugorek · 1 comment

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-02 08:29, hash: 7f7e1ab08842
Worked: version: 2.80?

Short description of error
If the panel has never been opened before, then it will not be possible to open it using the small arrow.

Exact steps for others to reproduce the error

  1. Factory setting.
  2. Go to Text Editor or image editor
  3. Click on arrow and drag.

2023-10-14_23.34.00.gif

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.23 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-02 08:29, hash: `7f7e1ab08842` Worked: version: 2.80? **Short description of error** If the panel has never been opened before, then it will not be possible to open it using the small arrow. **Exact steps for others to reproduce the error** 1. Factory setting. 2. Go to Text Editor or image editor 3. Click on arrow and drag. ![2023-10-14_23.34.00.gif](/attachments/1cd7defc-9846-481a-b967-50639503d163)
ugorek added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-14 18:41:17 +02:00
ugorek changed title from Невозможно открыть N (Ctrl+T) панель для первого раза для TextEditor to Unable to open N (Ctrl+T) panel for the first time for TextEditor 2023-10-14 18:41:42 +02:00
Iliya Katushenock added the
Interest
Python API
Interest
Text Editor
labels 2023-10-14 18:44:41 +02:00
Member

Thanks for the report. I can confirm.

Thanks for the report. I can confirm.
Pratik Borhade changed title from Unable to open N (Ctrl+T) panel for the first time for TextEditor to Unable to open N panel for the first time with click drag 2023-10-16 06:51:04 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-19 15:44:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113726
No description provided.