Fix #113726: Unable to open N panel for the first time with click drag

View2D isn't initialized in these regions yet, which is a valid state
for hidden regions. So consider that when calculating the region zoom
factor in the region scale operator.